# defect

./: .gitignore  CLAUDE.MD  Cargo.toml  README.MD  TODO.ARCHIVE.MD  TODO.MD  clippy.toml  justfile
.defect/: .gitignore  config.toml
.defect/workflow/: release.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
crates/acp/: Cargo.toml
crates/acp/src/: echo_provider.rs  fs.rs  lib.rs  project.rs  serve.rs  shell.rs
crates/acp/src/serve/: test.rs  tests.rs
crates/acp/tests/: background_reflow.rs  fs_delegation.rs  shell_delegation.rs  smoke.rs
crates/agent/: Cargo.toml
crates/agent/src/: error.rs  event.rs  fs.rs  hooks.rs  http.rs  lib.rs  llm.rs  policy.rs  session.rs  shell.rs  tool.rs
crates/agent/src/fs/: test.rs  tests.rs
crates/agent/src/hooks/: builtin.rs  command.rs  prompt.rs  step.rs  tests.rs
crates/agent/src/hooks/builtin/: tests.rs
crates/agent/src/hooks/command/: tests.rs
crates/agent/src/hooks/prompt/: tests.rs
crates/agent/src/hooks/step/: test.rs  tests.rs
crates/agent/src/llm/: capability.rs  chunk.rs  error.rs  model.rs  provider.rs  registry.rs  request.rs
crates/agent/src/llm/registry/: tests.rs
crates/agent/src/policy/: test.rs  tests.rs
crates/agent/src/session/: background.rs  capabilities.rs  context.rs  default.rs  events.rs  goal.rs  history.rs  permissions.rs  prompt.rs  tool_registry.rs  turn.rs
crates/agent/src/session/background/: test.rs  tests.rs
crates/agent/src/session/capabilities/: tests.rs
crates/agent/src/session/context/: tests.rs
crates/agent/src/session/events/: tests.rs
crates/agent/src/session/history/: test.rs  tests.rs
crates/agent/src/session/permissions/: test.rs  tests.rs
crates/agent/src/session/prompt/: test.rs  tests.rs
crates/agent/src/session/tool_registry/: tests.rs
crates/agent/src/session/turn/: compact.rs  compaction_slot.rs  content.rs  hooks.rs  llm.rs  llm_drive.rs  microcompact.rs  request_audit.rs  sanitize.rs  test.rs  tests.rs  tools.rs
crates/agent/src/session/turn/compact/: test.rs  tests.rs
crates/agent/src/session/turn/llm_drive/: tests.rs
crates/agent/src/session/turn/microcompact/: test.rs  tests.rs
crates/agent/src/session/turn/request_audit/: test.rs  tests.rs
crates/agent/src/session/turn/sanitize/: test.rs  tests.rs
crates/agent/src/session/turn/tools/: tests.rs
crates/agent/src/tool/: background_tasks.rs  goal_done.rs  skill.rs  spawn_agent.rs
crates/agent/src/tool/background_tasks/: test.rs  tests.rs
crates/agent/src/tool/skill/: test.rs  tests.rs
crates/agent/src/tool/spawn_agent/: test.rs  tests.rs
crates/agent/tests/: e2e_compaction.rs  e2e_turn.rs  session_capabilities.rs
crates/cli/: Cargo.toml
crates/cli/config/: Cargo.toml
crates/cli/config/src/: lib.rs
crates/cli/examples/: deepseek_e2e.rs  mcp_streamable_http_test_server.rs  mcp_test_server.rs
crates/cli/examples/common/: mod.rs
crates/cli/src/: args.rs  assembly.rs  hooks.rs  http_stack.rs  init.rs  lib.rs  main.rs  mcp_servers.rs  observability.rs  oneshot.rs  paths.rs  policy.rs  providers.rs  repl.rs  session_open.rs  test.rs  tools.rs
crates/cli/src/hooks/: tests.rs
crates/cli/src/test/: subagents.rs
crates/cli/src/tests/: subagents.rs
crates/cli/tests/: acp_stdio_smoke.rs  mcp_stdio_smoke.rs
crates/config/: Cargo.toml
crates/config/src/: frontmatter.rs  hooks.rs  lib.rs  loader.rs  mcp.rs  mcp_json.rs  overrides.rs  profiles.rs  skills.rs  types.rs
crates/config/src/loader/: test.rs  tests.rs
crates/config/src/profiles/: test.rs  tests.rs
crates/config/src/skills/: test.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  http.rs  lib.rs  llm.rs  tool.rs
crates/core/src/llm/: capability.rs  chunk.rs  error.rs  model.rs  request.rs
crates/http/: Cargo.toml  build.rs
crates/http/src/: fetch.rs  lib.rs  proxy.rs  retry.rs  trace.rs  user_agent.rs
crates/http/src/fetch/: tests.rs
crates/http/src/proxy/: tests.rs
crates/http/src/retry/: tests.rs
crates/http/src/user_agent/: tests.rs
crates/llm/: Cargo.toml
crates/llm/examples/: anthropic_smoke.rs  deepseek_smoke.rs  openai_smoke.rs
crates/llm/examples/common/: mod.rs
crates/llm/oas/: anthropic.yaml  openai.yaml
crates/llm/src/: lib.rs  protocol.rs  provider.rs
crates/llm/src/protocol/: anthropic_messages.rs  deepseek_chat.rs  openai_chat.rs
crates/llm/src/protocol/anthropic_messages/: tests.rs
crates/llm/src/protocol/openai_chat/: tests.rs
crates/llm/src/provider/: anthropic.rs  bedrock.rs  deepseek.rs  openai.rs
crates/llm/src/provider/bedrock/: tests.rs
crates/llm/src/wire/: anthropic.rs  openai.rs
crates/llm/tests/: anthropic_e2e.rs  common.rs  deepseek_e2e.rs  openai_e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  streamable_http.rs  test.rs  tests.rs
crates/obs/: Cargo.toml
crates/obs/src/: langfuse.rs  lib.rs  tracing_init.rs
crates/obs/src/langfuse/: ingest.rs  model.rs  observer.rs  projector.rs  test.rs  tests.rs
crates/sandbox/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  test.rs  tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  fetch.rs  fs.rs  lib.rs  search.rs  shell.rs
crates/tools/src/bash/: mod.rs  tests.rs
crates/tools/src/fetch/: render.rs  tests.rs
crates/tools/src/fs/: edit.rs  local_backend.rs  mod.rs  read.rs  replacer.rs  tests.rs  write.rs
crates/tools/src/fs/local_backend/: test.rs
crates/tools/src/fs/replacer/: tests.rs
crates/tools/src/search/: content.rs  files.rs  glob.rs  tests.rs
crates/tools/src/search/glob/: tests.rs
crates/tools/src/shell/: tests.rs
docs/: architecture.md  coding-reference.md
docs/inbound/: acp-bridge.md  acp-fs.md  acp-shell.md
docs/internal/: capabilities.md  config.md  errors.md  hook-step-context.md  hooks.md  llm-trait.md  observability-langfuse.md  session.md  skills.md  thinking-roundtrip.md  tool-trait.md  tools-bash.md  tools-fetch.md  tools-fs.md  tools-search.md  turn-loop.md
scripts/llm-codegen/: Cargo.toml
scripts/llm-codegen/src/: anthropic_strip.rs  main.rs  openai_strip.rs
(+20 files in other folders)
