[workspace]
resolver = "3"
members = ["crates/*", "scripts/llm-codegen"]
default-members = ["crates/*"]

# 日常优化构建：编译快、体积适中。`cargo build --release` / `cargo install` 默认走这里。
[profile.release]
opt-level = "s"       # 体积优先（比 "z" 温和，不会激进到影响性能热点）
lto = "thin"          # ThinLTO：体积收益明显，编译时间可控
codegen-units = 16    # 多 CGU 并行编译，开发期重链快
strip = "symbols"     # 去符号，体积优化

# 发布构建：体积最小、编译慢。`cargo build --profile dist` / `cargo install --profile dist`。
# 在 release 基础上叠 fat LTO + 单 CGU：跨 crate 全局内联/死代码消除，比 thin 再省 ~2.5MiB，
# 代价是全量编译 ~2min（vs release ~40s）。
[profile.dist]
inherits = "release"
lto = "fat"           # FatLTO：全局优化
codegen-units = 1     # 单 CGU 让 LLVM 做跨函数内联/死代码消除

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 内部 crate 互相引用
defect-agent = { path = "crates/agent" }
defect-http = { path = "crates/http" }
defect-llm = { path = "crates/llm" }
defect-tools = { path = "crates/tools" }
defect-mcp = { path = "crates/mcp" }
defect-sandbox = { path = "crates/sandbox" }
defect-storage = { path = "crates/storage" }
defect-config = { path = "crates/config" }
defect-acp = { path = "crates/acp" }
defect-obs = { path = "crates/obs" }

# 异步运行时
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync", "fs", "process", "signal", "time"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"

# 错误处理与日志
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# 并发数据结构
dashmap = "6"
arc-swap = "1"

# 标识符
uuid = { version = "1", features = ["v4"] }

# 可观测性上报（langfuse ingestion）
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# 协议与外部 SDK
agent-client-protocol = "0.12"
rmcp = { version = "1", features = ["client"] }

# LLM 客户端栈：toac codegen + 运行期 + hyper transport
# toac / toac-build 锁 git rev，等仓库稳定后改 crates.io 版本号
toac = { version = "0", features = ["sse"] }
toac-build = { version = "0" }
aws-config = "1"
# 关掉 default 里的 `rustls` feature —— 它指向 aws-smithy 的 `tls-rustls`，
# 实为 legacy-rustls-ring 老栈（ring + rustls 0.21 + hyper-rustls 0.24），会与
# 全局统一的 aws-lc-rs 新栈（hyper-rustls 0.27 / rustls 0.23，见 workspace 的
# hyper-rustls）并存，平白多链一整套 crypto 后端。bedrock client 实际复用
# aws-config 的 sdk_config（default-https-client = rustls-aws-lc），所以这套
# 老连接器是冗余的。只留 default-https-client + rt-tokio。
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
client-util = "0.3"
sse-stream = "0.2"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
# hyper-rustls 用 default features（aws-lc-rs + tls12 + native-tokio + http1 + logging）
# 加上 http2 — 与 client-util `enable_all_versions()` 匹配。
hyper-rustls = { version = "0.27", features = ["http2"] }
# hyper-http-proxy: 只做 CONNECT 隧道 + 原始 TCP，TLS 由外层 hyper-rustls 统一负责
# （详见 crates/http/src/proxy.rs `ProxyConnector::unsecured` 的注释）。
hyper-http-proxy = { version = "1.1", default-features = false }
tower = { version = "0.5", features = ["util", "timeout"] }
pin-project-lite = "0.2"
rand = "0.10"
oas3 = { version = "0.22", features = ["yaml-spec"] }
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
serde_yaml = "0.9"

# HTML → Markdown for fetch tool
htmd = "0.5"

# 测试基础设施
wiremock = "0.6"
tempfile = "3"
