[workspace]
resolver = "3"
members = ["crates/*", "scripts/llm-codegen"]
default-members = ["crates/*"]

# 日常优化构建：编译快、体积适中。`cargo build --release` / `cargo install` 默认走这里。
[profile.release]
opt-level = "s"       # 体积优先（比 "z" 温和，不会激进到影响性能热点）
lto = "thin"          # ThinLTO：体积收益明显，编译时间可控
codegen-units = 1     # 单 CGU：实测比 16 CGU 二进制更小（18M vs 21M）且重链更快——
                      # thin LTO 阶段本身是瓶颈，多 CGU 只减少跨单元去重、徒增体积
strip = "symbols"     # 去符号，体积优化

# 发布构建：体积最小、编译慢。`cargo build --profile dist` / `cargo install --profile dist`。
# 在 release 基础上只把 lto 升到 fat：跨 crate 全局内联/死代码消除，再省 ~2.5MiB（18M→16M），
# 代价是全量编译 ~2min（vs release ~40s）。
[profile.dist]
inherits = "release"
lto = "fat"           # FatLTO：全局优化
codegen-units = 1     # 单 CGU 让 LLVM 做跨函数内联/死代码消除

# 工作区级 lint：各 crate 通过 `[lints] workspace = true` 接入。
# too_many_arguments 阈值在 clippy.toml 里显式钉为 7（= 当前 clippy 默认，
# 固化以防上游改默认），deny 让本地 `cargo clippy` 直接硬失败、防回归。
[workspace.lints.clippy]
too_many_arguments = "deny"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vast-enterprise/defect"

[workspace.dependencies]
# 内部 crate 互相引用。
# version + path 双写：本地构建走 path，发布到 crates.io 时 path 被剥离、只留 version
# （crates.io 拒绝无版本依赖）。版本对齐 workspace.package.version，发版时一处改全仓库生效。
defect-agent = { path = "crates/agent", version = "0.1.0-alpha.2" }
defect-http = { path = "crates/http", version = "0.1.0-alpha.2" }
# default-features = false：provider 由 defect-cli 的 provider-* feature 显式转发，
# 让 `--no-default-features --features provider-anthropic` 能裁到单家。
defect-llm = { path = "crates/llm", version = "0.1.0-alpha.2", default-features = false }
defect-tools = { path = "crates/tools", version = "0.1.0-alpha.2" }
defect-mcp = { path = "crates/mcp", version = "0.1.0-alpha.2" }
defect-sandbox = { path = "crates/sandbox", version = "0.1.0-alpha.2" }
defect-storage = { path = "crates/storage", version = "0.1.0-alpha.2" }
defect-config = { path = "crates/config", version = "0.1.0-alpha.2" }
defect-acp = { path = "crates/acp", version = "0.1.0-alpha.2" }
defect-obs = { path = "crates/obs", version = "0.1.0-alpha.2" }

# 异步运行时
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync", "fs", "process", "signal", "time"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "1.1.2+spec-1.1.0"

# 错误处理与日志
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# 跨平台标准目录解析（config / state / data）。各平台走 OS 原生约定：
# Linux 遵循 XDG，Windows 用 %APPDATA%/%LOCALAPPDATA%，macOS 用 ~/Library。
# 取代手拼 XDG_*/HOME —— 后者在 Windows 上拿不到 HOME 直接失败。
directories = "6"

# 并发数据结构
dashmap = "6"
arc-swap = "1"

# 标识符
uuid = { version = "1", features = ["v4"] }

# 运行环境探测（注入 system prompt 的平台/发行版版本）
os_info = { version = "3", default-features = false }

# 可观测性上报（langfuse ingestion）
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# 协议与外部 SDK
agent-client-protocol = "0.12"
agent-client-protocol-schema = { version = "=0.13.2", features = ["tracing"] }
rmcp = { version = "1", features = ["client"] }

# LLM 客户端栈：toac codegen + 运行期 + hyper transport
toac = { version = "0", features = ["sse"] }
toac-build = { version = "0" }

# 本地测试用
# toac = { path = "../tower-openapi-client/toac", features = ["sse"] }
# toac-build = { path = "../tower-openapi-client/toac-build" }

aws-config = "1"
# 关掉 default 里的 `rustls` feature —— 它指向 aws-smithy 的 `tls-rustls`，
# 实为 legacy-rustls-ring 老栈（ring + rustls 0.21 + hyper-rustls 0.24），会与
# 全局统一的 aws-lc-rs 新栈（hyper-rustls 0.27 / rustls 0.23，见 workspace 的
# hyper-rustls）并存，平白多链一整套 crypto 后端。bedrock client 实际复用
# aws-config 的 sdk_config（default-https-client = rustls-aws-lc），所以这套
# 老连接器是冗余的。只留 default-https-client + rt-tokio。
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
client-util = "0.3"
sse-stream = "0.2"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
# hyper-rustls 用 default features（aws-lc-rs + tls12 + native-tokio + http1 + logging）
# 加上 http2 — 与 client-util `enable_all_versions()` 匹配。
hyper-rustls = { version = "0.27", features = ["http2"] }
# hyper-http-proxy: 只做 CONNECT 隧道 + 原始 TCP，TLS 由外层 hyper-rustls 统一负责
# （详见 crates/http/src/proxy.rs `ProxyConnector::unsecured` 的注释）。
hyper-http-proxy = { version = "1.1", default-features = false }
tower = { version = "0.5", features = ["util", "timeout"] }
pin-project-lite = "0.2"
rand = "0.10"
oas3 = { version = "0.22", features = ["yaml-spec"] }
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
serde_yaml = "0.9"

# HTML → Markdown for fetch tool
htmd = "0.5"

# 终端着色（仅 defect-cli 的 `repl` feature 用；只做 ANSI 字符串格式化，零运行时依赖）
owo-colors = "4"

# 仅 defect-cli 的 `repl` feature 用：跨平台终端 raw 模式 + 结构化按键事件
# （Linux / macOS / Windows 一致）。default-features=false 去掉 bracketed-paste /
# derive-more，只留读键(events)与 Windows 后端(windows)。
crossterm = { version = "0.29", default-features = false, features = ["events", "windows"] }

# 测试基础设施
wiremock = "0.6"
tempfile = "3"
