[package]
name = "defect-acp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
defect-agent.workspace = true
agent-client-protocol.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
