[package]
name = "defect-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent Client Protocol (ACP) server and session layer for the defect headless agent."

[dependencies]
defect-agent.workspace = true
defect-tools.workspace = true
agent-client-protocol = { workspace = true, features = ["unstable_session_model"] }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
serde_json.workspace = true
defect-storage.workspace = true

[lints]
workspace = true
