[package]
name = "defect-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol-schema.workspace = true
arc-swap.workspace = true
dashmap.workspace = true
futures.workspace = true
# 统一的 glob 实现：工具名匹配（hook matcher）与 skill triggers.globs 共用，
# 与 defect-tools 的 search 同款（ripgrep 栈）。
globset = "0.4"
os_info.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "process", "io-util", "time"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "test-util"] }
tempfile.workspace = true

[lints]
workspace = true
