[package]
name = "defect-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "defect_cli"
path = "src/lib.rs"

[[bin]]
name = "defect"
path = "src/bin/cli.rs"

[[bin]]
name = "defect-mcp-test-server"
path = "src/bin/mcp_test_server.rs"
required-features = ["__test-servers"]

[[bin]]
name = "defect-mcp-streamable-http-test-server"
path = "src/bin/mcp_streamable_http_test_server.rs"
required-features = ["__test-servers"]

[features]
# 默认全开所有 provider（与裁剪前行为一致）。按厂商裁剪二进制：
# `cargo build --no-default-features --features provider-anthropic`。
# echo provider 在 defect-acp，零额外依赖，永不 gate（兜底）；
# litellm 复用 openai provider 实现，跟随 provider-openai。
default = [
    "provider-anthropic",
    "provider-bedrock",
    "provider-openai",
    "provider-deepseek",
    "yaml",
]

# 转发给 defect-llm 的同名 feature。
provider-anthropic = ["defect-llm/provider-anthropic"]
provider-bedrock = ["defect-llm/provider-bedrock"]
provider-openai = ["defect-llm/provider-openai"]
provider-deepseek = ["defect-llm/provider-deepseek"]

# 转发给 defect-config：单文件 profile / 未来 skill 的 YAML frontmatter 支持。
# defect-config 默认即开 yaml 且本 crate 未关其 default，故去掉本行仍带 yaml；
# 显式转发是为了让 `--no-default-features` 能裁出无 yaml 的二进制。
yaml = ["defect-config/yaml"]

# 仅给集成测试用：拉起内嵌 MCP server 校验 client/transport round-trip。
# 主 release bin 不需要——开启后会拖入 rmcp 的完整 server side（schema 派生 +
# transport-streamable-http-server）以及 axum，二进制至少 +400KB .text。
# 双下划线前缀表示"内部"feature，下游不要直接依赖；workspace 内
# `cargo test -p defect-cli --features __test-servers` 显式启用。
__test-servers = ["dep:rmcp", "dep:axum"]

[dependencies]
defect-acp.workspace = true
defect-agent.workspace = true
agent-client-protocol.workspace = true
defect-config.workspace = true
defect-http.workspace = true
defect-llm.workspace = true
http.workspace = true
defect-mcp.workspace = true
defect-obs.workspace = true
defect-storage.workspace = true
defect-tools.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

# 仅在 `__test-servers` feature 下启用：拖入完整 rmcp server + axum 用于
# 跑 stdio / streamable-http MCP server 测试桩。
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server"], optional = true }
axum = { version = "0.8", optional = true }

[dev-dependencies]
futures.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
wiremock.workspace = true
tempfile.workspace = true

# `mcp_stdio_smoke` 通过 `CARGO_BIN_EXE_*` 拉起两个 test bin，
# 没启用 `__test-servers` feature 时这俩 bin 不会被编译，integration
# test 也跟着 gate 掉，避免 `env!` 宏在编译期报"未定义 env var"。
[[test]]
name = "mcp_stdio_smoke"
path = "tests/mcp_stdio_smoke.rs"
required-features = ["__test-servers"]
