[package]
name = "defect-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Layered TOML configuration loading and merging for the defect agent."

[features]
# YAML frontmatter 支持（单文件 profile 的 `---` 头，社区标准；未来 skill
# 加载也要面对带 YAML 头的文档）。默认开启；裁剪时
# `--no-default-features` 后 `---` 头会以可操作错误 hard fail，`+++`（TOML）
# 仍可用。serde_yaml 0.9 已是 workspace 依赖（codegen / oas3 在用），开启本
# feature 不新增第三方依赖。
default = ["yaml"]
yaml = ["dep:serde_yaml"]

[dependencies]
defect-agent.workspace = true
# skill `triggers.globs` 在解析期编译成 GlobSet（坏 glob 当场 fail-fast）。
globset = "0.4"
serde.workspace = true
# `.mcp.json` 解析（Claude Code/Cursor 事实标准 schema）。
serde_json.workspace = true
serde_yaml = { workspace = true, optional = true }
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
