[package]
name = "defect-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
defect-agent.workspace = true
defect-http.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

# LLM 客户端栈：toac codegen 出的 wire/* + hyper transport
toac.workspace = true
sse-stream.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
hyper.workspace = true
tower.workspace = true

[dev-dependencies]
agent-client-protocol.workspace = true
tracing-subscriber.workspace = true
wiremock.workspace = true
