[package]
name = "defect-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
defect-agent.workspace = true
agent-client-protocol.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-child-process"] }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
