[package]
name = "defect-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
defect-agent.workspace = true
defect-http.workspace = true
agent-client-protocol-schema.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client"] }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
bytes.workspace = true
sse-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true
