[package]
name = "defect-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) client integration for the defect agent."

[dependencies]
defect-agent.workspace = true
defect-http.workspace = true
agent-client-protocol-schema.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client"] }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
bytes.workspace = true
sse-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
