[package]
name = "defect-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
defect-agent.workspace = true
agent-client-protocol-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]

[lints]
workspace = true
