[package]
name = "defect-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Session persistence and storage backend for the defect agent."

[dependencies]
defect-agent.workspace = true
agent-client-protocol-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]

[lints]
workspace = true
