[package]
name = "defect-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
defect-agent.workspace = true
defect-config.workspace = true
agent-client-protocol.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "time", "macros", "sync", "rt"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["process", "io-util", "time", "macros", "sync", "rt", "rt-multi-thread", "test-util"] }
tempfile.workspace = true
